# ufmt-b

./: .gitignore  Cargo.toml
macros/src/: lib.rs
src/: helpers.rs  lib.rs
src/impls/: array.rs  core.rs  hex.rs  ixx.rs  marker.rs  nz.rs  ptr.rs  std.rs  tuple.rs  uxx.rs
tests/: gh36.rs  vs-std-write.rs
utils/: Cargo.toml
utils/src/: lib.rs
write/src/: lib.rs
