[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "[aka]bomb"]
categories = ["embedded", "no-std"]
description = "Fork of `ufmt`"
edition = "2021"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "ufmt-b"
readme = "README.md"
repository = "https://github.com/b0mbie/ufmt-b"
version = "0.2.0"

[dependencies]
ufmt-macros = { path = "macros", version = "0.3.0" }
ufmt-write = { path = "write", version = "0.1.0" }

# NOTE do NOT add an `alloc` feature before the alloc crate can be used in
# no-std BINARIES
[features]
# NOTE do NOT turn `std` into a default feature; this is a no-std first crate
std = ["ufmt-write/std"]

[[test]]
name = "gh36"
required-features = ["std"]

[[test]]
name = "vs-std-write"
required-features = ["std"]

[workspace]
members = [
  "macros",
  "utils",
  "write",
]
